modified:   09. Methods/Working with Delegates.ipynb

--- a/09. Methods/Working with Delegates.ipynb
+++ b/09. Methods/Working with Delegates.ipynb
@@ -1166,7 +1166,7 @@
     }
    },
    "source": [
-    "### The `Action<T>` and `Func<in T, out T>` Delegates"
+    "### The `Action<T>`, `Func<in T, out T>` and `Predicate<T>` Delegates"
    ]
   },
   {
@@ -1248,7 +1248,7 @@
    },
    "source": [
     "```c#\n",
-    "Action < T1, ..., T16 > delegateName = MethodNameWithoutParenthesis;\n",
+    "Action < T1, ..., T16 > delegateName = PredefinedOrAnonymousMethod;\n",
     "```"
    ]
   },
@@ -1425,7 +1425,7 @@
    },
    "source": [
     "```c#\n",
-    "Action < T1, ..., T16, out T> delegateName = MethodNameWithoutParenthesis;\n",
+    "Action < T1, ..., T16, out T > delegateName = PredefinedOrAnonymousMethod;\n",
     "```"
    ]
   },
@@ -1626,6 +1626,202 @@
    "source": [
     "// 4 / 4 = 1\n",
     "doArithmetic( 4, 4 )"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "#### `Predicate<T>`"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "One final generic delegate type is the `Predicate<T>`, which represents a method containing a set of criteria that checks whether the passed parameter meets that criteria. \n",
+    "   \n",
+    "A `Predicate<T>` delegate **can take only one input parameter** and  **must return a boolean** - `true` or `false`."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "The following is a generalized form of the `Predicate<T>` delegate:"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "```c#\n",
+    "Predicate < T > delegateName = PredefinedOrAnonymousMethod;\n",
+    "```"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Let's suppose we wanted to check if the `doArithmetic` method, which we have now adapted to perform an arithmetic division operation between two arguments, returns a result which is Even, we can do so, in similar fashion to the other delegates discussed, by assigning the `Predicate<T>` either a pre-existing or Anonymous method that returns a boolean value, as follows:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "public static bool IsEven( int result )\n",
+    "{\n",
+    "    return result % 2 == 0;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "Predicate <int> isEven = IsEven;  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div class=\"dni-plaintext\"><pre>False</pre></div><style>\r\n",
+       ".dni-code-hint {\r\n",
+       "    font-style: italic;\r\n",
+       "    overflow: hidden;\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview {\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview td {\r\n",
+       "    vertical-align: top;\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "details.dni-treeview {\r\n",
+       "    padding-left: 1em;\r\n",
+       "}\r\n",
+       "table td {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "table tr { \r\n",
+       "    vertical-align: top; \r\n",
+       "    margin: 0em 0px;\r\n",
+       "}\r\n",
+       "table tr td pre \r\n",
+       "{ \r\n",
+       "    vertical-align: top !important; \r\n",
+       "    margin: 0em 0px !important;\r\n",
+       "} \r\n",
+       "table th {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "</style>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "// 4 / 4 = 1, which is NOT even\n",
+    "isEven( doArithmetic( 4, 4 ) )"
    ]
   }
  ],
