modified:   09. Methods/Working with Delegates.ipynb

--- a/09. Methods/Working with Delegates.ipynb
+++ b/09. Methods/Working with Delegates.ipynb
@@ -1719,7 +1719,7 @@
     }
    },
    "source": [
-    "Let's suppose we wanted to check if the `doArithmetic` method, which we have now adapted to perform an arithmetic division operation between two arguments, returns a result which is Even, we can do so, in similar fashion to the other delegates discussed, by assigning the `Predicate<T>` either a pre-existing or Anonymous method that returns a boolean value, as follows:"
+    "Let's suppose we wanted to check if the `doArithmetic` method, which we have now adapted to perform an arithmetic division operation between two arguments, returns a result which is Even, we can do so, in similar fashion to the other delegates discussed, by assigning the `Predicate<T>` either a **pre-existing** or **Anonymous Method** that **returns a boolean value**, as follows:"
    ]
   },
   {
