modified:   09. Methods/Working with Delegates.ipynb modified:   15. Text Files/Streams.ipynb new file:   15. Text Files/Working with Files and Directories.ipynb

--- a/09. Methods/Working with Delegates.ipynb
+++ b/09. Methods/Working with Delegates.ipynb
@@ -1838,6 +1838,13 @@
      {
       "aliases": [],
       "name": "csharp"
+     },
+     {
+      "aliases": [
+       "frontend"
+      ],
+      "languageName": null,
+      "name": "vscode"
      }
     ]
    }
