modified:   15. Text Files/ExampleText/Fish.txt modified:   15. Text Files/StreamReader and StreamWriter.ipynb

--- a/15. Text Files/StreamReader and StreamWriter.ipynb
+++ b/15. Text Files/StreamReader and StreamWriter.ipynb
@@ -374,7 +374,11 @@
       "Line 1: One Fish\n",
       "Line 2: Two Fish\n",
       "Line 3: Red Fish\n",
-      "Line 4: Blue Fish\n"
+      "Line 4: Blue Fish\n",
+      "Line 5: False Fish\n",
+      "Line 6: True Fish\n",
+      "Line 7: Me Fish\n",
+      "Line 8: You Fish\n"
      ]
     }
    ],
@@ -599,7 +603,11 @@
       "Line 1: One Fish\n",
       "Line 2: Two Fish\n",
       "Line 3: Red Fish\n",
-      "Line 4: Blue Fish\n"
+      "Line 4: Blue Fish\n",
+      "Line 5: False Fish\n",
+      "Line 6: True Fish\n",
+      "Line 7: Me Fish\n",
+      "Line 8: You Fish\n"
      ]
     }
    ],
@@ -1536,7 +1544,11 @@
       "Line 5: False Fish\n",
       "Line 6: True Fish\n",
       "Line 7: Me Fish\n",
-      "Line 8: You Fish\n"
+      "Line 8: You Fish\n",
+      "Line 9: False Fish\n",
+      "Line 10: True Fish\n",
+      "Line 11: Me Fish\n",
+      "Line 12: You Fish\n"
      ]
     }
    ],
