renamed:    17. Trees and Graphs/The Anatomies of a Trees and Graphs.ipynb -> 17. Trees and Graphs/The Anatomies of Trees and Graphs.ipynb

--- a/17. Trees and Graphs/The Anatomies of Trees and Graphs.ipynb
+++ b/17. Trees and Graphs/The Anatomies of Trees and Graphs.ipynb
@@ -27,7 +27,7 @@
     }
    },
    "source": [
-    "## The Anatomies of a Trees and Graphs\n",
+    "## The Anatomies of Trees and Graphs.\n",
     "---"
    ]
   },
@@ -43,10 +43,11 @@
     }
    },
    "source": [
-    "Very often we have to describe a group of real life objects, which have such relation to one another that we cannot use linear data structures for their description. Instead, we find that we must use a **branched structure**.\n",
+    "Very often we have to describe a group of real life objects, which have such relation to one another that we cannot use linear data structures for their description. \n",
+    "   \n",
+    "Instead, we find that we must use a **branched structure**.\n",
     "   \n",
     "A **tree-like** or **graph-like** data structure are **branched** data structures consisting of sets of elements, known as **nodes**, which can be **linked to other nodes**, sometimes *hierarchically*, sometimes *not*. \n",
-    "    \n",
     "**Trees** generally represent hierarchies, while **Graphs** represent more general relations such as the map of city."
    ]
   },
