--- a/17. Trees and Graphs/The Anatomies of Trees and Graphs.ipynb
+++ b/17. Trees and Graphs/The Anatomies of Trees and Graphs.ipynb
@@ -110,6 +110,28 @@
    "source": [
     "<img src=\"_img/ProjectMemberHierarchy.jpg\" style=\"display: block; margin: auto; width: 700px;\"></img>"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "What is the information we can get from this hierarchy?\n",
+    "   \n",
+    "- The direct boss of the developers is the **Team** **Leader**, but indirectly they are subordinate to the **Project** **Manager**. \n",
+    "- The **Team** **Leader** is subordinate only to the **Project** **Manager**. \n",
+    "- On the other hand, **Developer** **1** has no subordinates. \n",
+    "- The **Project** **Manager** is the highest in the hierarchy and has no manager.\n",
+    "  \n",
+    "Structured in this way, we see that even such a little figure gives us a great deal of useful information."
+   ]
   }
  ],
  "metadata": {
