--- a/17. Trees and Graphs/The Anatomies of Trees and Graphs.ipynb
+++ b/17. Trees and Graphs/The Anatomies of Trees and Graphs.ipynb
@@ -125,7 +125,7 @@
    "source": [
     "What is the information we can get from this hierarchy?\n",
     "   \n",
-    "- The direct boss of the developers is the **Team** **Leader**, but indirectly they are subordinate to the **Project** **Manager**. \n",
+    "- The direct boss of the developers is the **Team** **Leader**, but indirectly they are all subordinate to the **Project** **Manager**. \n",
     "- The **Team** **Leader** is subordinate only to the **Project** **Manager**. \n",
     "- On the other hand, **Developer** **1** has no subordinates. \n",
     "- The **Project** **Manager** is the highest in the hierarchy and has no manager.\n",
