modified:   16. Linear Data Structures/Linear ADTs.ipynb

--- a/16. Linear Data Structures/Linear ADTs.ipynb
+++ b/16. Linear Data Structures/Linear ADTs.ipynb
@@ -413,6 +413,7 @@
      },
      {
       "aliases": [],
+      "languageName": null,
       "name": ".NET"
      },
      {
@@ -458,6 +459,7 @@
       "aliases": [
        "frontend"
       ],
+      "languageName": null,
       "name": "vscode"
      },
      {
