modified:   17. Trees and Graphs/The Anatomies of Trees and Graphs.ipynb new file:   17. Trees and Graphs/_img/TreeTerminology.png

--- a/17. Trees and Graphs/The Anatomies of Trees and Graphs.ipynb
+++ b/17. Trees and Graphs/The Anatomies of Trees and Graphs.ipynb
@@ -177,6 +177,218 @@
    "source": [
     "Let's reinterperet the heirarchy above for a more general case, in which the **nodes** (**circles**), each containing unique numerical values such that may be easily specified, are themselves connected together by the same **edges** (**lines**) as the previous example."
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<img src=\"_img/TreeTerminology.png\" style=\"display: block; margin: auto; width: 500px;\"></img>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "We may observe the following relational characteristics of the heirarchy illustrated above:"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "- Nodes `19`, `21`, `14` are below node `7` and are directly connected to it. As such, these modes are **direct descendants (child nodes)** of node `7`, and node `7` is their **parent**.\n",
+    "- Similarly, `1`, `12` and `31` are **children** of `19`, and `19` is their **parent**.\n",
+    "- Intuitively we can say that `21` is **sibling** of `19`, because they are both **children** of `7` (the reverse is also true – `19` is sibling of `21`).\n",
+    "- For `1`, `12`, `31`, `23` and `6`, since node `7` precedes them in the hierarchy, it is their **ancestor** (indirect parent), and they are, thereby, it's **descendants**."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Below, let's summarize some additional **terminologies** which apply to Tree-based heirarchies such as the one expressed in our example:"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "##### Tree\n",
+    "A **Tree** a **recursive** data structure, which **consists of nodes and is connected with edges**. The following statements are true for trees:\n",
+    "- Each node can have **0 or more direct descendants** (**children**). \n",
+    "- Each node has **at most one parent**. There is only one special node without parent – the **root** (if the tree is not empty).\n",
+    "- All nodes are **reachable from the root** – there is a path from the root to each node in the tree."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "##### Root\n",
+    "The **Root** is the **node without a parent**. In our example this is node `7`."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "##### Leaf\n",
+    "A **Leaf** is a **node without child nodes**. In our example – `1`, `12`, `31`, `21`, `23` and `6`."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "##### Internal Node\n",
+    "**Internal nodes** are the nodes, which are **neither a leaf, nor a root** (all nodes, which have parent and at least one child). Such nodes are `19` and `14`."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "##### Path\n",
+    "**Path** is called a **sequence of nodes connected with edges**, in which there is **no repetition of nodes**. Example of path is the sequence `1` $\\rightarrow$ `19` $\\rightarrow$ `7` $\\rightarrow$ `21`. \n",
+    "- The sequence `1` $\\rightarrow$ `19` $\\rightarrow$ `23` is *not* a path, because `19` and `23` are *not connected*.\n",
+    "- **Path length** is the **number of edges connecting the sequence of nodes** in the path. It is equal to the **number of nodes in the path minus 1**. The length of our example for path (`1`, `19`, `7` and `21`) is **3**."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "##### Depth\n",
+    "The **Depth** of a node we refers to the **length of the path from the root to certain node**. In our example `7` as root has depth zero, `19` has depth one and `23` – depth two."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "##### Height\n",
+    "The **Height** of tree is the **maximum depth** of all its nodes. In our example the tree height is **2**"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "##### Degree\n",
+    "The **Degree** of node is the **number of direct children** of the given node. The degree of `19` and `7` is **three**, but the degree of `14` is **two**. The leaves have degree **zero**."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "##### Branching Factor\n",
+    "**Branching factor** is the **maximum of the degrees of all nodes** in the tree. In our example the **maximum degree** of the nodes is **3**, so the **branching factor** is **3**."
+   ]
   }
  ],
  "metadata": {
@@ -201,6 +413,7 @@
       "aliases": [
        "frontend"
       ],
+      "languageName": null,
       "name": "vscode"
      },
      {
@@ -245,6 +458,17 @@
      {
       "aliases": [],
       "name": "value"
+     },
+     {
+      "aliases": [
+       "js"
+      ],
+      "languageName": "JavaScript",
+      "name": "javascript"
+     },
+     {
+      "aliases": [],
+      "name": "webview"
      }
     ]
    }
