modified:   17. Trees and Graphs/The Anatomies of Trees and Graphs.ipynb new file:   17. Trees and Graphs/_img/GraphExample.jpg

--- a/17. Trees and Graphs/The Anatomies of Trees and Graphs.ipynb
+++ b/17. Trees and Graphs/The Anatomies of Trees and Graphs.ipynb
@@ -253,11 +253,16 @@
     }
    },
    "source": [
-    "##### Tree\n",
-    "A **Tree** a **recursive** data structure, which **consists of nodes and is connected with edges**. The following statements are true for trees:\n",
-    "- Each node can have **0 or more direct descendants** (**children**). \n",
-    "- Each node has **at most one parent**. There is only one special node without parent – the **root** (if the tree is not empty).\n",
-    "- All nodes are **reachable from the root** – there is a path from the root to each node in the tree."
+    "|Terminology|Description|\n",
+    "|:---|:---|\n",
+    "|Tree|A **Tree** a **recursive** data structure, which **consists of nodes and is connected with edges**. The following statements are true for trees:<br><br>Each node can have **0 or more direct descendants** (**children**).<br><br>Each node has **at most one parent**. There is only one special node without parent – the **root** (if the tree is not empty).<br><br>All nodes are **reachable from the root** – there is a path from the root to each node in the tree.|\n",
+    "|Root|The **Root** is the **node without a parent**. In our example this is node `7`.|\n",
+    "|Leaf|A **Leaf** is a **node without child nodes**. In our example – `1`, `12`, `31`, `21`, `23` and `6`.|\n",
+    "|Internal Node|**Internal nodes** are the nodes, which are **neither a leaf, nor a root** (all nodes, which have parent and at least one child). Such nodes are `19` and `14`.|\n",
+    "|Path|**Path** is called a **sequence of nodes connected with edges**, in which there is **no repetition of nodes**.<br><br>Example of path is the sequence `1` $\\rightarrow$ `19` $\\rightarrow$ `7` $\\rightarrow$ `21`.<br><br>The sequence `1` $\\rightarrow$ `19` $\\rightarrow$ `23` is *not* a path, because `19` and `23` are *not connected*.|\n",
+    "|Depth|The **Depth** of a node we refers to the **length of the path from the root to certain node**. In our example `7` as root has depth zero, `19` has depth one and `23` – depth two.|\n",
+    "|Degree|The **Height** of tree is the **maximum depth** of all its nodes. In our example the tree height is **2**.|\n",
+    "|Branching Factor|**Branching factor** is the **maximum of the degrees of all nodes** in the tree. In our example the **maximum degree** of the nodes is **3**, so the **branching factor** is **3**.|"
    ]
   },
   {
@@ -272,8 +277,21 @@
     }
    },
    "source": [
-    "##### Root\n",
-    "The **Root** is the **node without a parent**. In our example this is node `7`."
+    "<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
    ]
   },
   {
@@ -288,8 +306,7 @@
     }
    },
    "source": [
-    "##### Leaf\n",
-    "A **Leaf** is a **node without child nodes**. In our example – `1`, `12`, `31`, `21`, `23` and `6`."
+    "### Graphs"
    ]
   },
   {
@@ -304,8 +321,11 @@
     }
    },
    "source": [
-    "##### Internal Node\n",
-    "**Internal nodes** are the nodes, which are **neither a leaf, nor a root** (all nodes, which have parent and at least one child). Such nodes are `19` and `14`."
+    "**Graphs** are very useful and fairly common data structures. They are used to describe a wide variety of **relationships between objects** and, in practice, can be related to almost everything. \n",
+    "\n",
+    "**Trees are a subset of the graphs**. Additionally, since **Lists** are also special cases of trees, **Lists are therfore graphs**. As such, **graphs** represent a generalized structure that allows modeling of very large set of real-world situations.\n",
+    "   \n",
+    "Frequent use of **graphs** in practice has led to extensive research in \"graph theory\", in which there is a large number of known problems for **graphs** and for most of them there are well-known solutions."
    ]
   },
   {
@@ -320,10 +340,7 @@
     }
    },
    "source": [
-    "##### Path\n",
-    "**Path** is called a **sequence of nodes connected with edges**, in which there is **no repetition of nodes**. Example of path is the sequence `1` $\\rightarrow$ `19` $\\rightarrow$ `7` $\\rightarrow$ `21`. \n",
-    "- The sequence `1` $\\rightarrow$ `19` $\\rightarrow$ `23` is *not* a path, because `19` and `23` are *not connected*.\n",
-    "- **Path length** is the **number of edges connecting the sequence of nodes** in the path. It is equal to the **number of nodes in the path minus 1**. The length of our example for path (`1`, `19`, `7` and `21`) is **3**."
+    "Let’s consider the following sample graph (which we will soon discover is **finite** and **oriented**). Observe that, similar to our previous Tree hierarchy example, we have numbered the graph in such a way that it is easier to refer to any of it's nodes uniquely:"
    ]
   },
   {
@@ -338,56 +355,7 @@
     }
    },
    "source": [
-    "##### Depth\n",
-    "The **Depth** of a node we refers to the **length of the path from the root to certain node**. In our example `7` as root has depth zero, `19` has depth one and `23` – depth two."
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
-   "source": [
-    "##### Height\n",
-    "The **Height** of tree is the **maximum depth** of all its nodes. In our example the tree height is **2**"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
-   "source": [
-    "##### Degree\n",
-    "The **Degree** of node is the **number of direct children** of the given node. The degree of `19` and `7` is **three**, but the degree of `14` is **two**. The leaves have degree **zero**."
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
-   "source": [
-    "##### Branching Factor\n",
-    "**Branching factor** is the **maximum of the degrees of all nodes** in the tree. In our example the **maximum degree** of the nodes is **3**, so the **branching factor** is **3**."
+    "<img src=\"_img/GraphExample.jpg\" style=\"display: block; margin: auto; width: 550px;\"></img>"
    ]
   }
  ],
