modified:   17. Trees and Graphs/The Anatomies of Trees and Graphs.ipynb renamed:    17. Trees and Graphs/_img/GraphExample.jpg -> 17. Trees and Graphs/_img/DirectedGraphExample.jpg new file:   17. Trees and Graphs/_img/UndirectedEdge.jpg new file:   17. Trees and Graphs/_img/UndirectedGraph.jpg new file:   17. Trees and Graphs/_img/WeightedDirectedGraph.jpg

--- a/17. Trees and Graphs/The Anatomies of Trees and Graphs.ipynb
+++ b/17. Trees and Graphs/The Anatomies of Trees and Graphs.ipynb
@@ -125,7 +125,7 @@
    "source": [
     "What is the information we can get from this hierarchy?\n",
     "   \n",
-    "- The direct boss of the developers is the **Team** **Leader**, but indirectly they are all subordinate to the **Project** **Manager**. \n",
+    "- The direct boss of the **Developers** is the **Team** **Leader**, but indirectly they are all subordinate to the **Project** **Manager**. \n",
     "- The **Team** **Leader** is subordinate only to the **Project** **Manager**. \n",
     "- On the other hand, **Developer** **1** has no subordinates. \n",
     "- The **Project** **Manager** is the highest in the hierarchy and has no manager.\n",
@@ -340,7 +340,7 @@
     }
    },
    "source": [
-    "Let’s consider the following sample graph (which we will soon discover is **finite** and **oriented**). Observe that, similar to our previous Tree hierarchy example, we have numbered the graph in such a way that it is easier to refer to any of it's nodes uniquely:"
+    "<br>"
    ]
   },
   {
@@ -355,7 +355,270 @@
     }
    },
    "source": [
-    "<img src=\"_img/GraphExample.jpg\" style=\"display: block; margin: auto; width: 550px;\"></img>"
+    "#### Directed vs. Undirected Graphs"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "A **Finite directed graph** is called the couple $(V, E)$, in which $V$ is a **finite set of vertices** and $E$ is a **finite set of directed edges**. Each *edge* $e$ that belongs to $E$ is **an ordered couple of vertices** $u$ and $v$, meaning that $e = (u, v)$."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Let’s consider the following sample graph which is both **finite** and **directed**. "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<img src=\"_img/DirectedGraphExample.jpg\" style=\"display: block; margin: auto; width: 550px;\"></img>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Observe that, similar to our previous Tree hierarchy example, we have numbered the graph in such a way that it is easier to refer to any of it's nodes uniquely."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "We may also observe the following relational characteristics of the **finite directed graph** illustrated above:"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "- The circles of this scheme are known as **vertices** (**nodes**) and the arrows connecting them are known as **directed edges**.\n",
+    "- The vertex representing the **source of where the arrow comes out** is called the **predecessor** of the vertex to which the arrow points. In our example, `19` is a **predecessor** of `1`. \n",
+    "  - Conversely, `1` is a **successor** of `19`. \n",
+    "- Unlike the tree structure, **each vertex can have more than one predecessor**. In our example, `21` has three predecessors – `19`, `1` and `7`, respectively. \n",
+    "- If **two vertices are connected with an edge**, then we say these two vertices are **adjacent** through this edge."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Further, observe that a **weight function** can be assigned that **associates each edge to a real number**. These numbers are called **weights** **(costs)**. \n",
+    "   \n",
+    "For examples of the weights we can specify are: \n",
+    "- some *distance* between neighboring cities\n",
+    "- the *length of the directed connections* between two neighboring waystations \n",
+    "- the *crossing function* of a pipe\n",
+    "\n",
+    "A graph that has weights on the edges is called **weighted**.     \n",
+    "Below, we reinterperet our example of a finite directed graph as a **weighted graph**:"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<img src=\"_img/WeightedDirectedGraph.jpg\" style=\"display: block; margin: auto; width: 550px;\"></img>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "If, instead of arrows, the vertices are connected with **segments**, then the **segments** will be called **undirected edges**, and the graph thereby be reffered to as **undirected**. \n",
+    "    \n",
+    "Practically, we can imagine that an **undirected edge** from **vertex A** to **vertex B** is a **two-way edge** and equivalent to *two opposite directed edges* between the same two vertices:"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<img src=\"_img/UndirectedEdge.jpg\" style=\"display: block; margin: auto; width: 450px;\"></img>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "A **connected** undirected graph is an undirected graph in which there is a path from each node to each other. For example, the following graph is *not* **connected** because there is no path from `1` to `7`."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<img src=\"_img/UndirectedGraph.jpg\" style=\"display: block; margin: auto; width: 400px;\"></img>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "#### Graph Terminologies"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "|Terminology|Description|\n",
+    "|:---|:---|\n",
+    "|Path|**Path in a graph** is a sequence of vertices $v1$, $v2$, $\\dots$, $v_n$,, such as there is an edge from $v_i$ to $v_{i+1}$ for every $i$ from $1$ to $n-1$.<br><br> In our example, **path** is the sequence `1`, `12`, `19`, `21`.<br><br>`7`, `21`, and `1` is *not* a **path** because there is no edge starting from `21` and ending in `1`.|\n",
+    "|Path Length|**Length of path** is the number of edges connecting vertices in the sequence of the vertices in the path. This number is equal to the **number of vertices in the path minus one**.<br><br>The **length** of our example for path `1`, `12`, `19`, `21` is **three**.|\n",
+    "|Cost|Cost of path in a weighted graph, we call the sum of the weights (costs) of the edges involved in the path. In real life the road from Sofia to Madrid, for example, is equal to the length of the road from Sofia to Paris plus the length of the road from Madrid to Paris. In our example, the length of the path \"1\", \"12\", \"19\" and \"21\" is equal to 3 + 16 + 2 = 21.|\n",
+    "|Internal Node|**Internal nodes** are the nodes, which are **neither a leaf, nor a root** (all nodes, which have parent and at least one child). Such nodes are `19` and `14`.|\n",
+    "|Path|**Path** is called a **sequence of nodes connected with edges**, in which there is **no repetition of nodes**.<br><br>Example of path is the sequence `1` $\\rightarrow$ `19` $\\rightarrow$ `7` $\\rightarrow$ `21`.<br><br>The sequence `1` $\\rightarrow$ `19` $\\rightarrow$ `23` is *not* a path, because `19` and `23` are *not connected*.|\n",
+    "|Depth|The **Depth** of a node we refers to the **length of the path from the root to certain node**. In our example `7` as root has depth zero, `19` has depth one and `23` – depth two.|\n",
+    "|Degree|The **Height** of tree is the **maximum depth** of all its nodes. In our example the tree height is **2**.|\n",
+    "|Branching Factor|**Branching factor** is the **maximum of the degrees of all nodes** in the tree. In our example the **maximum degree** of the nodes is **3**, so the **branching factor** is **3**.|"
    ]
   }
  ],
@@ -386,6 +649,7 @@
      },
      {
       "aliases": [],
+      "languageName": null,
       "name": ".NET"
      },
      {
@@ -425,6 +689,7 @@
      },
      {
       "aliases": [],
+      "languageName": null,
       "name": "value"
      },
      {
