--- a/17. Trees and Graphs/The Anatomies of Trees and Graphs.ipynb
+++ b/17. Trees and Graphs/The Anatomies of Trees and Graphs.ipynb
@@ -613,12 +613,10 @@
     "|:---|:---|\n",
     "|Path|**Path in a graph** is a sequence of vertices $v1$, $v2$, $\\dots$, $v_n$,, such as there is an edge from $v_i$ to $v_{i+1}$ for every $i$ from $1$ to $n-1$.<br><br> In our example, **path** is the sequence `1`, `12`, `19`, `21`.<br><br>`7`, `21`, and `1` is *not* a **path** because there is no edge starting from `21` and ending in `1`.|\n",
     "|Path Length|**Length of path** is the number of edges connecting vertices in the sequence of the vertices in the path. This number is equal to the **number of vertices in the path minus one**.<br><br>The **length** of our example for path `1`, `12`, `19`, `21` is **three**.|\n",
-    "|Cost|Cost of path in a weighted graph, we call the sum of the weights (costs) of the edges involved in the path. In real life the road from Sofia to Madrid, for example, is equal to the length of the road from Sofia to Paris plus the length of the road from Madrid to Paris. In our example, the length of the path \"1\", \"12\", \"19\" and \"21\" is equal to 3 + 16 + 2 = 21.|\n",
-    "|Internal Node|**Internal nodes** are the nodes, which are **neither a leaf, nor a root** (all nodes, which have parent and at least one child). Such nodes are `19` and `14`.|\n",
-    "|Path|**Path** is called a **sequence of nodes connected with edges**, in which there is **no repetition of nodes**.<br><br>Example of path is the sequence `1` $\\rightarrow$ `19` $\\rightarrow$ `7` $\\rightarrow$ `21`.<br><br>The sequence `1` $\\rightarrow$ `19` $\\rightarrow$ `23` is *not* a path, because `19` and `23` are *not connected*.|\n",
-    "|Depth|The **Depth** of a node we refers to the **length of the path from the root to certain node**. In our example `7` as root has depth zero, `19` has depth one and `23` – depth two.|\n",
-    "|Degree|The **Height** of tree is the **maximum depth** of all its nodes. In our example the tree height is **2**.|\n",
-    "|Branching Factor|**Branching factor** is the **maximum of the degrees of all nodes** in the tree. In our example the **maximum degree** of the nodes is **3**, so the **branching factor** is **3**.|"
+    "|Cost|The **Cost of path**, in a **weighted graph**, is the **sum of the weights (costs) of the edges involved in the path**. In real life the road from Sofia to Madrid, for example, is equal to the length of the road from Sofia to Paris plus the length of the road from Madrid to Paris.<br><br>In our example, the length of the path `1`, `12`, `19` and `21` is equal to $3 + 16 + 2 = 21$.|\n",
+    "|Loop|A **Loop** is a path in which the **initial and the final vertex of the path are the same**.<br><br> An Example of vertices forming a **loop** are `1`, `12` and `19`.<br>Conversely, `1`, `7` and `21` *do not* form a **loop**.|\n",
+    "|Looping Edge|A **looping edge** is an **edge which starts and ends in the same vertex**.<br><br> In our example, the vertex `14` is looped.|\n",
+    "|Tree|When expressed as a graph, a **tree** is an **undirected, connected graph without loops.**|"
    ]
   }
  ],
@@ -644,7 +642,6 @@
       "aliases": [
        "frontend"
       ],
-      "languageName": null,
       "name": "vscode"
      },
      {
