modified:   17. Trees and Graphs/The Anatomies of Trees and Graphs.ipynb

--- a/17. Trees and Graphs/The Anatomies of Trees and Graphs.ipynb
+++ b/17. Trees and Graphs/The Anatomies of Trees and Graphs.ipynb
@@ -127,7 +127,7 @@
     "   \n",
     "- The direct boss of the **Developers** is the **Team** **Leader**, but indirectly they are all subordinate to the **Project** **Manager**. \n",
     "- The **Team** **Leader** is subordinate only to the **Project** **Manager**. \n",
-    "- On the other hand, **Developer** **1** has no subordinates. \n",
+    "- On the other hand, the **Developers** have no subordinates. \n",
     "- The **Project** **Manager** is the highest in the hierarchy and has no manager.\n",
     "  \n",
     "Structured in this way, we see that even such a little figure gives us a great deal of useful information."
@@ -611,7 +611,7 @@
    "source": [
     "|Terminology|Description|\n",
     "|:---|:---|\n",
-    "|Path|**Path in a graph** is a sequence of vertices $v1$, $v2$, $\\dots$, $v_n$,, such as there is an edge from $v_i$ to $v_{i+1}$ for every $i$ from $1$ to $n-1$.<br><br> In our example, **path** is the sequence `1`$\\rightarrow$`12`$\\rightarrow$`19`$\\rightarrow$`21`.<br><br>`7`$\\rightarrow$`21`$\\rightarrow$`1` is *not* a **path** because there is no edge starting from `21` and ending in `1`.|\n",
+    "|Path|**Path in a graph** is a sequence of vertices $v_1$, $v_2$, $\\dots$ , $v_n$, such that there is an edge from $v_i$ to $v_{i+1}$ for every $i$ from $1$ to $n-1$.<br><br> In our example, **path** is the sequence `1`$\\rightarrow$`12`$\\rightarrow$`19`$\\rightarrow$`21`.<br><br>`7`$\\rightarrow$`21`$\\rightarrow$`1` is *not* a **path** because there is no edge starting from `21` and ending in `1`.|\n",
     "|Path Length|**Length of path** is the number of edges connecting vertices in the sequence of the vertices in the path. This number is equal to the **number of vertices in the path minus one**.<br><br>The **length** of our example for path `1`$\\rightarrow$`12`$\\rightarrow$`19`$\\rightarrow$`21` is **three**.|\n",
     "|Cost|The **Cost of path**, in a **weighted graph**, is the **sum of the weights (costs) of the edges involved in the path**. In real life the road from Sofia to Madrid, for example, is equal to the length of the road from Sofia to Paris plus the length of the road from Madrid to Paris.<br><br>In our example, the length of the path `1`$\\rightarrow$`12`$\\rightarrow$`19`$\\rightarrow$`21` is equal to $3 + 16 + 2 = 21$.|\n",
     "|Loop|A **Loop** is a path in which the **initial and the final vertex of the path are the same**.<br><br> An Example of vertices forming a **loop** are `1`$\\rightarrow$`12`$\\rightarrow$`19`.<br>Conversely, `1`$\\rightarrow$`7` and `21` *do not* form a **loop**.|\n",
