--- a/17. Trees and Graphs/The Anatomies of Trees and Graphs.ipynb
+++ b/17. Trees and Graphs/The Anatomies of Trees and Graphs.ipynb
@@ -3,14 +3,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
+   "metadata": {},
    "source": [
     "# 17. Trees and Graphs"
    ]
@@ -18,14 +11,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
+   "metadata": {},
    "source": [
     "## The Anatomies of Trees and Graphs.\n",
     "---"
@@ -34,14 +20,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
+   "metadata": {},
    "source": [
     "Very often we have to describe a group of real life objects, which have such relation to one another that we cannot use linear data structures for their description. \n",
     "   \n",
@@ -54,14 +33,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
+   "metadata": {},
    "source": [
     "<br>"
    ]
@@ -69,14 +41,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
+   "metadata": {},
    "source": [
     "### Trees"
    ]
@@ -84,14 +49,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
+   "metadata": {},
    "source": [
     "Let's begin with an example modeled after the **hierarchy of the participants in a project**. Consider the following hierarchal diagram illustrated as follows:"
    ]
@@ -99,14 +57,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
+   "metadata": {},
    "source": [
     "<img src=\"_img/ProjectMemberHierarchy.jpg\" style=\"display: block; margin: auto; width: 500px;\"></img>"
    ]
@@ -114,14 +65,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
+   "metadata": {},
    "source": [
     "What is the information we can get from this hierarchy?\n",
     "   \n",
@@ -136,14 +80,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
+   "metadata": {},
    "source": [
     "<br>"
    ]
@@ -151,14 +88,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
+   "metadata": {},
    "source": [
     "#### Tree Terminologies"
    ]
@@ -166,14 +96,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
+   "metadata": {},
    "source": [
     "Let's reinterperet the heirarchy above for a more general case, in which the **nodes** (**circles**), each containing unique numerical values such that may be easily specified, are themselves connected together by the same **edges** (**lines**) as the previous example."
    ]
@@ -181,14 +104,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
+   "metadata": {},
    "source": [
     "<img src=\"_img/TreeTerminology.png\" style=\"display: block; margin: auto; width: 650px;\"></img>"
    ]
@@ -196,14 +112,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
+   "metadata": {},
    "source": [
     "We may observe the following relational characteristics of the heirarchy illustrated above:"
    ]
@@ -211,14 +120,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
+   "metadata": {},
    "source": [
     "- Nodes `19`, `21`, `14` are below node `7` and are directly connected to it. As such, these modes are **direct descendants (child nodes)** of node `7`, and node `7` is their **parent**.\n",
     "- Similarly, `1`, `12` and `31` are **children** of `19`, and `19` is their **parent**.\n",
@@ -229,14 +131,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
+   "metadata": {},
    "source": [
     "Below, let's summarize some additional **terminologies** which apply to Tree-based heirarchies such as the one expressed in our example:"
    ]
@@ -244,14 +139,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
+   "metadata": {},
    "source": [
     "|Terminology|Description|\n",
     "|:---|:---|\n",
@@ -268,28 +156,14 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
+   "metadata": {},
    "source": [
     "<br>"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
+   "metadata": {},
    "source": [
     "<br>"
    ]
@@ -297,14 +171,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
+   "metadata": {},
    "source": [
     "### Graphs"
    ]
@@ -312,14 +179,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
+   "metadata": {},
    "source": [
     "**Graphs** are very useful and fairly common data structures. They are used to describe a wide variety of **relationships between objects** and, in practice, can be related to almost everything. \n",
     "\n",
@@ -331,14 +191,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
+   "metadata": {},
    "source": [
     "<br>"
    ]
@@ -346,14 +199,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
+   "metadata": {},
    "source": [
     "#### Directed vs. Undirected Graphs"
    ]
@@ -361,14 +207,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
+   "metadata": {},
    "source": [
     "A **Finite directed graph** is called the couple $(V, E)$, in which $V$ is a **finite set of vertices** and $E$ is a **finite set of directed edges**. Each *edge* $e$ that belongs to $E$ is **an ordered couple of vertices** $u$ and $v$, meaning that $e = (u, v)$."
    ]
@@ -376,14 +215,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
+   "metadata": {},
    "source": [
     "Let’s consider the following sample graph which is both **finite** and **directed**. "
    ]
@@ -391,14 +223,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
+   "metadata": {},
    "source": [
     "<img src=\"_img/DirectedGraphExample.jpg\" style=\"display: block; margin: auto; width: 550px;\"></img>"
    ]
@@ -406,14 +231,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
+   "metadata": {},
    "source": [
     "Observe that, similar to our previous Tree hierarchy example, we have numbered the graph in such a way that it is easier to refer to any of it's nodes uniquely."
    ]
@@ -421,14 +239,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
+   "metadata": {},
    "source": [
     "We may also observe the following relational characteristics of the **finite directed graph** illustrated above:"
    ]
@@ -436,14 +247,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
+   "metadata": {},
    "source": [
     "- The circles of this scheme are known as **vertices** (**nodes**) and the arrows connecting them are known as **directed edges**.\n",
     "- The vertex representing the **source of where the arrow comes out** is called the **predecessor** of the vertex to which the arrow points. In our example, `19` is a **predecessor** of `1`. \n",
@@ -455,14 +259,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
+   "metadata": {},
    "source": [
     "Further, observe that a **weight function** can be assigned that **associates each edge to a real number**. These numbers are called **weights** **(costs)**. \n",
     "   \n",
@@ -478,14 +275,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
+   "metadata": {},
    "source": [
     "<img src=\"_img/WeightedDirectedGraph.jpg\" style=\"display: block; margin: auto; width: 550px;\"></img>"
    ]
@@ -493,14 +283,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
+   "metadata": {},
    "source": [
     "<br>"
    ]
@@ -508,14 +291,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
+   "metadata": {},
    "source": [
     "If, instead of arrows, the vertices are connected with **segments**, then the **segments** will be called **undirected edges**, and the graph thereby be reffered to as **undirected**. \n",
     "    \n",
@@ -525,14 +301,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
+   "metadata": {},
    "source": [
     "<img src=\"_img/UndirectedEdge.jpg\" style=\"display: block; margin: auto; width: 350px;\"></img>"
    ]
@@ -540,14 +309,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
+   "metadata": {},
    "source": [
     "A **connected** undirected graph is an undirected graph in which there is a path from each node to each other. For example, the following graph is *not* **connected** because there is no path from `1` to `7`."
    ]
@@ -555,14 +317,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
+   "metadata": {},
    "source": [
     "<img src=\"_img/UndirectedGraph.jpg\" style=\"display: block; margin: auto; width: 350px;\"></img>"
    ]
@@ -570,14 +325,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
+   "metadata": {},
    "source": [
     "<br>"
    ]
@@ -585,14 +333,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
+   "metadata": {},
    "source": [
     "#### Graph Terminologies"
    ]
@@ -600,14 +341,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
+   "metadata": {},
    "source": [
     "|Terminology|Description|\n",
     "|:---|:---|\n",
@@ -626,34 +360,29 @@
    "language": "C#",
    "name": ".net-csharp"
   },
+  "language_info": {
+   "name": "polyglot-notebook"
+  },
   "polyglot_notebook": {
    "kernelInfo": {
     "defaultKernelName": "csharp",
     "items": [
      {
+      "aliases": [],
+      "name": ".NET"
+     },
+     {
       "aliases": [
-       "c#",
-       "C#"
+       "C#",
+       "c#"
       ],
       "languageName": "C#",
       "name": "csharp"
      },
      {
       "aliases": [
-       "frontend"
-      ],
-      "languageName": null,
-      "name": "vscode"
-     },
-     {
-      "aliases": [],
-      "languageName": null,
-      "name": ".NET"
-     },
-     {
-      "aliases": [
-       "f#",
-       "F#"
+       "F#",
+       "f#"
       ],
       "languageName": "F#",
       "name": "fsharp"
@@ -662,6 +391,13 @@
       "aliases": [],
       "languageName": "HTML",
       "name": "html"
+     },
+     {
+      "aliases": [
+       "js"
+      ],
+      "languageName": "JavaScript",
+      "name": "javascript"
      },
      {
       "aliases": [],
@@ -687,15 +423,13 @@
      },
      {
       "aliases": [],
-      "languageName": null,
       "name": "value"
      },
      {
       "aliases": [
-       "js"
+       "frontend"
       ],
-      "languageName": "JavaScript",
-      "name": "javascript"
+      "name": "vscode"
      },
      {
       "aliases": [],
